# RAG

./: .gitignore  Makefile  README.md  ex.py  explain.md  pyproject.toml
data/datasets/AnsweredQuestions/: dataset_code_public.json
data/datasets/UnansweredQuestions/: dataset_code_public.json  dataset_docs_public.json
data/datasets/datasets_public/public/AnsweredQuestions/: dataset_docs_public.json
data/output/search_results/: dataset_code_public.json  dataset_docs_public.json
data/output/search_results_and_answer/: dataset_docs_public.json
src/student/: __main__.py  evaluation.py  generation.py  ingestion.py  models.py  retrieval.py
